--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
                     <li><a href="#menu">Menu</a></li>
                     <li><a href="#about">About</a></li>
                 </ul>
-                <span class="icons">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </span>
+                <button class="icons">
+                    <span class="span-div">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </span>
+                </button>
                 <!-- for Mobile Screen -->
                 <div class="drop">
                     <ul>
@@ -142,8 +144,8 @@
     <br>
     <!-- Start Footer -->
     <div class="footer">
-        <P>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS"
-                target="_blank">w3.css</a></P>
+        <P>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank">w3.css</a>
+        </P>
     </div>
 </body>
 
