--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Gourmet Catering Template</title>
+    <!-- Logo -->
+    <link rel="shortcut icon" href="favicon_io/favicon.ico">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <!-- Main Template CSS File -->
     <link rel='stylesheet' type='text/css' media='screen' href='css/template_1.css'>
